2004-12-06  Jakub Jelinek  <jakub@redhat.com>

	* fold-const.c (fold_single_bit_test): If flag_syntax_only, pretend
	LOAD_EXTEND_OP is not defined.
	(fold): Likewise.

2004-12-07  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR middle-end/17827
	* c-semantics.c (expand_unreachable_if_stmt): Invoke
	expand_cond on the condition.

2004-12-06  Aldy Hernandez  <aldyh@redhat.com>

	* config/rs6000/sysv4.h: Define RELOCATABLE_NEEDS_FIXUP to 1.

2004-12-05  Richard Henderson  <rth@redhat.com>

	PR target/18841
	* config/alpha/alpha.md (UNSPECV_SETJMPR_ER): New.
	(builtin_setjmp_receiver_er_sl_1): Use it.
	(builtin_setjmp_receiver_er_1): Likewise.
	(builtin_setjmp_receiver_er, exception_receiver_er): Remove.
	(builtin_setjmp_receiver): Don't split for explicit relocs until
	after reload.
	(exception_receiver): Likewise.

2004-12-05  Alan Modra  <amodra@bigpond.net.au>

	* config/rs6000/rs6000.c (rs6000_assemble_integer): Fix typo.

2004-12-04  Richard Henderson  <rth@redhat.com>

	* emit-rtl.c, expr.c, function.c, integrate.c, optabs.c, rtl.h:
	Revert the patches for PR rtl-opt/15289.

2004-12-03  Eric Botcazou  <ebotcazou@adacore.com>

	* integrate.c (expand_inline_function): Accept non-CONCAT arguments
	for CONCAT parameters and invoke read_complex_part on them.

2004-12-02  Richard Henderson  <rth@redhat.com>

	* expr.c (write_complex_part): Use simplify_gen_subreg when the
	submode is at least as large as a word.
	(read_complex_part): Likewise.

2004-12-02  Roger Sayle  <roger@eyesopen.com>

	PR target/9908
	* config/i386/i386.md (*call_value_1, *sibcall_value_1): Correct
	Intel assembler syntax by using %A1 instead of %*%1.

2004-12-02  Richard Henderson  <rth@redhat.com>

	PR rtl-opt/15289
	* emit-rtl.c (gen_complex_constant_part): Remove.
	(gen_realpart, gen_imagpart, subreg_realpart_p): Remove.
	* expr.c (write_complex_part, read_complex_part): New.
	(emit_move_via_alt_mode, emit_move_via_integer, emit_move_resolve_push,