@@ -1,3 +1,9 @@
+2004-11-26  Jakub Jelinek  <jakub@redhat.com>
+
+	* builtins.c (expand_builtin): Handle BUILT_IN_{,V,F,VF}PRINTF_CHK.
+	(fold_builtin): Don't handle BUILT_IN_{,F}PRINTF_UNLOCKED and
+	BUILT_IN_{,V,F,VF}PRINTF{,_CHK} here.
+
 2004-12-06  Jakub Jelinek  <jakub@redhat.com>
 
 	* fold-const.c (fold_single_bit_test): If flag_syntax_only, pretend
